--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <body>
-<p> is this allowed </p>
-  </body>
+<center><p> The <b> other </b> Ben Linder. </p>
+<img src="images/keith-linder.jpg" alt="Keith Linder">
+</center>
+</body>
