closing up a loose tag

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<body>
-<center><p> The <b> other </b> Ben Linder. </p>
-<img src="images/keith-linder.jpg" alt="Keith Linder">
-</center>
-</body>
+
+  <body>
+    <center><p> The <b> other </b> Ben Linder. </p>
+    <img src="images/keith-linder.jpg" alt="Keith Linder">
+    </center>
+  </body>
+</html>
