--- a/index.html
+++ b/index.html
@@ -6,4 +6,15 @@
     <img src="images/keith-linder.jpg" alt="Keith Linder">
     </center>
   </body>
+
+  <body>
+    <h3>
+      The Truth behind Ben Linder
+    </h3>
+    <img src="image/ben_google.png" alt="assasination?">
+    Obviously Google messed up. Obviously they accidentally included a picture of our professor in
+    a list of images describing an assasinated enginner that goes by the same name. Obviously? I don't
+    think so. Google, a multi-billion dollar business, messed up? There are too many similarities.
+    Ben, Linder, an engineer, with very similar looks. I think we need to explore more.
+  </body>
 </html>
