--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h3>
       The Truth behind Ben Linder
     </h3>
-    <img src="image/ben_google.png" alt="assasination?">
+    <img src="images/ben_google.png" alt="assasination?">
     Obviously Google messed up. Obviously they accidentally included a picture of our professor in
     a list of images describing an assasinated enginner that goes by the same name. Obviously? I don't
     think so. Google, a multi-billion dollar business, messed up? There are too many similarities.
