--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
     <h3>
       The Truth behind Ben Linder
     </h3>
+    <center>
     <img src="images/ben_google.png" alt="assasination?">
+    </center>
+    <body>
     Obviously Google messed up. Obviously they accidentally included a picture of our professor in
-    a list of images describing an assasinated enginner that goes by the same name. Obviously? I don't
+    a list of images describing an assasinated engineer that goes by the same name. Obviously? I don't
     think so. Google, a multi-billion dollar business, messed up? There are too many similarities.
     Ben, Linder, an engineer, with very similar looks. I think we need to explore more.
   </body>
