some formatting things

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   </body>
 
   <body>
+    <center>
     <h3>
       The Truth behind Ben Linder
     </h3>
+  </center>
     <center>
     <img src="images/ben_google.png" alt="assasination?">
     </center>
@@ -18,6 +20,6 @@
     Obviously Google messed up. Obviously they accidentally included a picture of our professor in
     a list of images describing an assasinated engineer that goes by the same name. Obviously? I don't
     think so. Google, a multi-billion dollar business, messed up? There are too many similarities.
-    Ben, Linder, an engineer, with very similar looks. I think we need to explore more.
+    Ben, Linder, an engineer, a mechanical engineer, with very similar looks. I think we need to explore more.
   </body>
 </html>
